--- a/tosafe/tosafe.csproj
+++ b/tosafe/tosafe.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Model\AssemblyInfo.cs" />
     <Compile Include="View\Main.cs" />
     <Compile Include="Model\Json.cs" />
+    <Compile Include="Model\Session.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
