--- a/TwoSafe/TwoSafe.csproj
+++ b/TwoSafe/TwoSafe.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\Connection.cs" />
+    <Compile Include="Model\Cookie.cs" />
+    <Compile Include="Model\Session.cs" />
     <Compile Include="View\FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
