--- a/TwoSafe/TwoSafe.csproj
+++ b/TwoSafe/TwoSafe.csproj
@@ -46,8 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\ApiUser.cs" />
-    <Compile Include="Model\Cookie.cs" />
-    <Compile Include="Model\Session.cs" />
+    <Compile Include="Model\User.cs" />
     <Compile Include="View\FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
