working icons on any maschine

--- a/TwoSafe/App.config
+++ b/TwoSafe/App.config
@@ -14,7 +14,7 @@
                 <value />
             </setting>
             <setting name="Language" serializeAs="String">
-                <value />
+                <value>en</value>
             </setting>
         </TwoSafe.Properties.Settings>
     </userSettings>
