проверка на наличие папки при старте

--- a/TwoSafe/Properties/Settings.settings
+++ b/TwoSafe/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="UserFolderPath" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Users\Paul Gurov\2safe</Value>
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
