--- a/TwoSafe/App.config
+++ b/TwoSafe/App.config
@@ -17,7 +17,7 @@
                 <value />
             </setting>
             <setting name="UserFolderPath" serializeAs="String">
-                <value>C:\Users\Paul Gurov\2safe</value>
+                <value />
             </setting>
         </TwoSafe.Properties.Settings>
     </userSettings>
