showing user in the prefs form

--- a/TwoSafe/App.config
+++ b/TwoSafe/App.config
@@ -19,6 +19,15 @@
             <setting name="UserFolderPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LanSync" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DesktopNotifications" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StartOnSystemStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TwoSafe.Properties.Settings>
     </userSettings>
 </configuration>
