--- a/TwoSafe/TwoSafe.csproj
+++ b/TwoSafe/TwoSafe.csproj
@@ -87,6 +87,12 @@
     <Compile Include="View\CreateFolderDialog.Designer.cs">
       <DependentUpon>CreateFolderDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\CreateFolderFromSettingsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\CreateFolderFromSettingsDialog.Designer.cs">
+      <DependentUpon>CreateFolderFromSettingsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\CustomApplicationContext.cs" />
     <Compile Include="View\FormLogin.cs">
       <SubType>Form</SubType>
@@ -117,6 +123,15 @@
     </Compile>
     <EmbeddedResource Include="View\CreateFolderDialog.resx">
       <DependentUpon>CreateFolderDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\CreateFolderDialog.ru-RU.resx">
+      <DependentUpon>CreateFolderDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\CreateFolderFromSettingsDialog.resx">
+      <DependentUpon>CreateFolderFromSettingsDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\CreateFolderFromSettingsDialog.ru-RU.resx">
+      <DependentUpon>CreateFolderFromSettingsDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
