--- a/TwoSafe/App.config
+++ b/TwoSafe/App.config
@@ -28,6 +28,9 @@
             <setting name="StartOnSystemStartup" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="LastGetEventsTime" serializeAs="String">
+                <value>0</value>
+            </setting>
         </TwoSafe.Properties.Settings>
     </userSettings>
 </configuration>
