from client to server added

--- a/TwoSafe/App.config
+++ b/TwoSafe/App.config
@@ -31,6 +31,9 @@
             <setting name="LastGetEventsTime" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="RootId" serializeAs="String">
+                <value>913989033028</value>
+            </setting>
         </TwoSafe.Properties.Settings>
     </userSettings>
 </configuration>
