--- a/TwoSafe/App.config
+++ b/TwoSafe/App.config
@@ -28,6 +28,12 @@
             <setting name="StartOnSystemStartup" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Email" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Account" serializeAs="String">
+                <value />
+            </setting>
         </TwoSafe.Properties.Settings>
     </userSettings>
 </configuration>
