--- a/TwoSafe/Properties/Settings.settings
+++ b/TwoSafe/Properties/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="StartOnSystemStartup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Email" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Account" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
