--- a/TwoSafe/TwoSafe.csproj
+++ b/TwoSafe/TwoSafe.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Controller\Synchronize.cs" />
     <Compile Include="Controller\Dirs.cs" />
     <Compile Include="Controller\Files.cs" />
+    <Compile Include="Helpers\ParallelExecutionHelper.cs" />
     <Compile Include="Model\ActiveRecord.cs" />
     <Compile Include="Model\Dir.cs" />
     <Compile Include="Model\File.cs" />
