--- a/TwoSafe/TwoSafe.csproj
+++ b/TwoSafe/TwoSafe.csproj
@@ -184,6 +184,10 @@
     <EmbeddedResource Include="View\WinFormStrings.ru-RU.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings1.Designer.cs</LastGenOutput>
+    </None>
     <None Include="TwoSafe_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
