--- a/TwoSafe/App.config
+++ b/TwoSafe/App.config
@@ -40,6 +40,9 @@
             <setting name="Account" serializeAs="String">
                 <value />
             </setting>
+            <setting name="TrashId" serializeAs="String">
+                <value>913990033028</value>
+            </setting>
         </TwoSafe.Properties.Settings>
     </userSettings>
 </configuration>
